# pctk

./: .gitignore  LICENSE  README.md  plot_time_course.py  povwriter.py  pyproject.toml  requirements.txt  setup.py  time_course_analysis.py  time_course_cells.ipynb
config/: povwriter-settings-coe.xml  povwriter-settings.xml
modules/: multicellds.py
modules/params/: cell_phases_dict.json  phases_grouping_dict.json
output_test/: cells_00000.txt  cells_00120.txt  output00000000.xml  output00000001_cells_physicell.mat  output00000002.xml  output00000003_cells_physicell.mat  output00000004.xml  output00000004_cells_physicell.mat
src/pctk/: __init__.py  config.py  multicellds.py  plot.py  povwriter.py  render.py
src/pctk/cmds/: pctk.py  plot.py  plot_time_course.py  render.py  summarize_simulation.py  write_pov_files.py
src/test/data/config/: povwriter-settings.xml
src/test/data/output/: initial_cells.mat  output00000000_cells_physicell.mat  output00000000_cells_physicell.pov  output00000004_cells.mat
src/tools4physicell/: config.py  povwriter.py
src/tools4physicell/cmds/: animate.py  plot_time_course.py  process_emews.py  write_pov_files.py
test/: cells_00600.txt  cells_00720.txt  cells_00840.txt  cells_00960.txt  cells_01080.txt  initial.xml  output00000000_cells_physicell.mat  output00000002_cells.mat  output00000003.xml
test/output/: cells_00240.txt  cells_00360.txt  cells_00480.txt  output00000000_cells_physicell.pov  output00000001.xml  output00000001_cells.mat  output00000002_cells_physicell.mat  output00000003_cells.mat
