[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pctk"
description = "PhysiCell ToolKit: a tool for handling MultiCellDS output from PhysiCell and PhysiBoSS simulations."
readme = "README.rst"
license = {text = "BSD 3-Clause License"}
authors = [
     {name = "Miguel Ponce de Leon", email = "miguel.ponce@bsc.es"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "importlib-metadata", 
    "numpy", 
    "scipy", 
    "matplotlib",
    "pandas",
]
version = "0.2.0"

[project.scripts]
pctk = "pctk.cmds.pctk:main"
plot-time-course = "pctk.cmds.plot_time_course:main"
write-pov-files  = "pctk.cmds.write_pov_files:main"
