[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pctk"
version = "0.2.0"
authors = [
     {name = "Miguel Ponce de Leon", email = "miguel.ponce@bsc.es"},
]
description = "PhysiCell ToolKit: a tool for handling MultiCellDS output from PhysiCell and PhysiBoSS simulations."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy", 
    "scipy", 
    "matplotlib",
    "pandas",
]

[project.scripts]
pctk = "pctk.cmds.pctk:main"
plot-time-course = "pctk.cmds.plot_time_course:main"
write-pov-files  = "pctk.cmds.write_pov_files:main"

[project.urls]
"Homepage" = "https://github.com/migp11/pctk"
"Bug Tracker" = "https://github.com/migp11/pctk/issues"
